# quick_web

./: .gitignore  CONTEXT.md  README.md  Taskfile.yml  go.mod  go.sum  index.html  main.go  package.json  pnpm-lock.yaml  vite.config.ts
.codebuddy/memory/: 2026-06-23.md  2026-06-26.md  2026-07-01.md
.github/workflows/: build-windows.yml
.task/checksum/: build-frontend--DEV--RUNNER-npm-  generate-bindings--BUILD_FLAGS--tags-production--trimpath--buildvcs-false--ldflags---w--s--H-windowsgui--buildid---  windows-common-generate-icons  windows-common-install-frontend-deps-npm
docs/: architecture-review-2026-06-26.html  deepseek-pc-tauri-migration-report.md
docs/adr/: 0001-settings-architecture.md
docs/docs/: changelog.md  credits.md  status.md  whats-new.md
docs/docs/community/: links.md  showcase.md  templates.md
docs/docs/concepts/: architecture.md  bridge.md  build-system.md  lifecycle.md  manager-api.md
frontend/: index.html  package-lock.json
frontend/public/: style.css
frontend/src/: main.js
internal/coordinator/: coordinator.go
internal/hotkey/: hotkey.go
internal/injector/: injector.go
internal/log/: devmode.go  log.go
internal/scripts/: loader.go
internal/settings/: model.go  service.go
internal/webview/: manager.go
scripts/: batch-delete.js  focus-textarea.js
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkey.rs  lib.rs  logger.rs  main.rs  script_injector.rs  settings.rs  window_manager.rs
(+94 files in other folders)
