[package]
name = "quick-web-v2"
version = "0.1.0"
description = "DeepSeek Desktop — 多站点浏览器壳 (Tauri 移植版)"
authors = ["you"]
edition = "2021"

[lib]
name = "quick_web_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"


[profile.dev]
codegen-units = 256


[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.2"

[env]
TAURI_BUNDLER_TIMEOUT = "600"
